--- a/.mise.toml
+++ b/.mise.toml
@@ -1,5 +1,5 @@
 [tools]
-golang = '1.17.6'
+golang = '1.22.2'
 python = '3.11.6'
 task = '3.31.0'
 vault = '1.15.2'
@@ -10,6 +10,11 @@ fzf = '0.44.0'
 yq = '4.40.1'
 jq = '1.7'
 gomplate = 'v3.11.6'
-teller = '1.5.6'
 sops = '3.8.1'
 vendir = '0.38.0'
+agebox = '0.6.1'
+node = '21.7.3'
+"go:github.com/zyedidia/eget" = "latest"
+"npm:prettier" = "latest"
+yamllint = "latest"
+"npm:spectral" = "latest"
